--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel": "^6.5.2",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "mongoose": "^4.4.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.7.7",
+    "babel-preset-es2015": "^6.6.0"
   }
 }
